@@ -1,5 +1,11 @@
 2013-01-31  Gregory Soyez  <soyez@fastjet.fr>
 
+	* scripts/update-contribs.sh:
+	* scripts/internal/common.sh:
+	allowed to run
+	  update-contribs.sh --force
+	which will answer yes to all "yesno" questions asked
+
 	* VERSION:          *** ADDED ***
 	added a VERSION file
 
